# quick-sequence-code

./: Cargo.toml  Dockerfile  README.md  compose.yml  index.html  run.sh
pkg/: package.json  qsc_generator.d.ts  qsc_generator.js  qsc_generator_bg.wasm  qsc_generator_bg.wasm.d.ts
public/: index.html  main.js  style.css
qsc-generator/: Cargo.toml
qsc-generator/src/: app.rs  constants.rs  dom.rs  events.rs  file_handler.rs  lib.rs  qrcode.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
