[workspace]
members = ["qsc-generator","server"]
resolver = "3"

[workspace.dependencies]
wasm-bindgen = "0.2.105"
axum = "0.8.7"
mime = "0.3.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
web-sys = { version = "0.3.82", features = ["console"] }
qrcode = { version= "0.14.1" }
